update datebases status
